# grimoire

./: .dockerignore  .gitignore  .gitmodules  AGENTS.md  Dockerfile  MIGRATION_EXECUTION_CHECKLIST.md  README.md  docker-compose.example.yml  grimoire.service  pyproject.toml
.github/workflows/: build.yml
dashboard/: +page.svelte  vram_budget.html
dflash/dflash/: CMakeLists.txt
dflash/dflash/scripts/: run.py  server.py
dflash/dflash/src/: decode_cmds.cpp  decode_context.h  decode_snapshot.h  laguna_daemon.cpp  laguna_daemon.h  laguna_target_graph.cpp  qwen35_target_graph.cpp
dflash/dflash/test/: test_dflash.cpp
etc/: grimoire.service  models.json
lucebox/dflash/: CMakeLists.txt
lucebox/dflash/scripts/: prefix_cache.py  server_tools.py
lucebox/dflash/src/: decode_context.h  decode_dflash.cpp  decode_graph.cpp  decode_helpers.cpp  decode_snapshot.cpp  decode_target.cpp  decode_target_split.cpp  dflash_entrypoint.cpp  laguna_target_graph.cpp  qwen35_target_graph.cpp  qwen3_5_0p8b_drafter.h  qwen3_5_0p8b_graph.cpp  qwen3_5_0p8b_loader.cpp
opencode/: package-lock.json
opencode/plugins/: conversation-recall.ts
patches/: grimoire-webui-branding.patch  grimoire-webui-dashboard.patch  grimoire-webui-history.patch  grimoire-webui-stream-fix.patch  prefill-thinking-fix.patch  slot-save-mtmd.patch  spec-dflash-contract.patch  spec-dflash-contract.patch.new
records/: INBOX.md  PLANS.md  SPEC.md  STATUS.md
records/decisions/: DEC-20260516-001-migration-scope.md  DEC-20260516-002-compact-full-mandatory.md  DEC-20260516-003-text-only-served-paths.md  DEC-20260516-004-gguf-draft-transition.md  DEC-20260516-005-port-bee-dflash-pipeline.md  DEC-20260517-001-debug-acceptance-before-phase2.md  DEC-20260517-002-use-bee-binary-for-canary.md  DEC-20260517-003-full-bee-stack-gpu-ring-debug.md  DEC-20260517-004-retire-thetom-dflash-port.md
records/research/: RSH-20260516-001-rollback-cache-fix.md  RSH-20260516-002-fresh-state-failure-envelope.md  RSH-20260516-003-pflash-compression-baseline.md  RSH-20260516-004-snapshot-staging-slot-leak.md
src/grimoire/: __init__.py  auth.py  cli.py  config.py  entrypoint.py  gateway.py  history.py  ingest.py  launcher.py  model_manager.py  plugins.py  registry.py  telemetry.py  usage.py
src/grimoire/dflash/: __init__.py  daemon.py  kv_cache_store.py  pflash_shim.c  prefill.py  prefix_cache.py  session_kv.py  snapshot_swap.py
src/grimoire/prompt/: __init__.py  generic.py  qwen.py
src/grimoire/proxy/: dflash.py  llama.py  sse.py
src/grimoire/routes/: __init__.py  dashboard.py  history.py  models.py
src/pflash/: CMakeLists.txt
src/pflash/src/: internal.h  pflash_daemon.cpp  qwen3_5_0p8b_graph.cpp  qwen3_5_0p8b_loader.cpp  qwen3_drafter.cpp  qwen3_drafter.h
templates/: gemma-4-31B-it-chat_template.jinja
tests/: _monitor.py  conftest.py  deep-smoke.sh  smoke-test.sh  test_dflash.py  test_drop_in_blockers.py  test_e2e_smoke.py  test_history_tree.py  test_kv_cache_store.py  test_llama_proxy.py  test_native_dflash_registry.py  test_pflash_ctx_tune.py  test_pflash_pipeline.py  test_plugins.py  test_router_mode.py  test_stress_dflash.py  tune_ctx.py  webui-patch-build.sh
